lang/derive/tests/ui/fail/05-generic.stderr
error: generic structs are not supported
 --> $DIR/05-generic.rs:5:1
  |
5 | / pub struct MyStruct<T> {
6 | |     a: T,
7 | | }
  | |_^
